Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/parse.c
	Some old mail clients were could associate a message/rfc822
	Content-Type with a BASE64 Content-Transfer-Encoding, which
	violates RFC2046. If we find this case, we now force
	ENCODE_NORMAL (the one used for both 7bit and 8bit).

	* src/{setup.c, setup.h}
	new conf. option warn_deprecated_options to control whether we
	want hypermail to display warnings when a configuration file
	has options that have been deprecated or that we plan to deprecate
	in the next release.

	* src/{defaults.h.in, setup.c, hypermail.c}
	set a default breadcrumb for messages if neither
	mhtmlnavbar2upfile ihtmlnavbar2upfile config options are set

	* src/{parse.c, struct.c, hypermail.h}
	spamify() was being systematically applied to boundary-ids which broke
	boundary detection in multipart/ messages whenever a boundary-id had a
	'@' character.
	closes #94

	* src/{string.c, proto.h, struct.c, parse.c}
	When parsing message headers having DOS-style line
	endings ('\r\n'), the '\r' was not being dropped in most
	of the headers. Expanded the solution proposed in PR#98
	closes #95

	* src/{setup.c, setup.h, parse.c}, doc/{hmrc.html, hmrc.4}
	New conf. option max_attachments_per_msg. Used for limiting
	the number of attachments we want to parse for messages.
	See hmrc.html, hmrc.4 or hypermail -v for more info.

	* src/{parse.c, string.c, proto.h}
	Some malformed messages could insert a \r followed by some
	text between the Content-Type or Content-Type parameters,
	their values and the end of the line or the ';'. Hypermail
	now detects these values and filters them out.

	* src/mail.c libcgi configure.ac Makefile.in src/Makefile.in
	Purged the years old deprecated mail script and its associated
	libraries. Althought the script itself had been disabled
	by code changes, its code base was still being built and